--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
 
     <section id="home">
-        <h2>Bienvenidos a Jabones Naturales RD</h2>
+        <h2>Bienvenidos</h2>
         <p>Descubre nuestros jabones hechos a mano con ingredientes naturales de la mejor calidad.</p>
         <div class="jabon-inicio">
             <img src="imagenes/jabon-inicio.jpg">
